simplification in ToURL()