@@ -1,6 +1,6 @@
 /*
  * $Id$
- * $Name$
+ * $Name:  $
  *
  * Copyright 1999, 2000, 2001, 2002 by Bruno Lowagie.
  *
@@ -155,33 +155,12 @@ public class Utilities {
 	 * @throws MalformedURLException
 	 */
 	public static URL toURL(String filename) throws MalformedURLException {
-		if (filename.startsWith("file:/") || filename.startsWith("http://")
-				|| filename.startsWith("https://")
-				|| filename.startsWith("jar:")) {
-			return new URL(filename);
-		}
-		File f = new File(filename);
-		String path = f.getAbsolutePath();
-		if (File.separatorChar != '/') {
-			path = path.replace(File.separatorChar, '/');
-		}
-		if (!path.startsWith("/")) {
-			path = "/" + path;
-		}
-		if (!path.endsWith("/") && f.isDirectory()) {
-			path = path + "/";
-		}
-	    char[] t = path.toCharArray();
-	    StringBuffer sb = new StringBuffer();
-	    for (int k = 0; k < t.length; ++k) {
-	        char c = t[k];
-	        int a = Utilities.excUri.indexOf(c);
-	        if (a >= 0)
-	            sb.append(Utilities.excUriEsc[a]);
-	        else
-	            sb.append(c);
-	    }
-		return new URL("file", "", sb.toString());
+        try {
+            return new URL(filename);
+        }
+        catch (Exception e) {
+            return new File(filename).toURL();
+        }
 	}
 
 	/**
